--- a/style.css
+++ b/style.css
@@ -73,3 +73,65 @@ nav .active {
     font-weight: 100;
     letter-spacing: 10px;
 }
+
+.gallery {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    display: flex;
+    border: 1px white solid;
+    width: 92%;
+    height: 500px;
+}
+
+@media (max-width: 600px) {
+
+    nav {
+        width: 90%;
+    }
+
+    nav .head {
+        flex-wrap: wrap;
+        margin: 5px 5px;
+        font-size: 12px;
+    }
+
+    nav .head:nth-child(1) {
+        margin-left: 0px;
+    }
+
+    .dots-box {
+        display: flex;
+        width: 10%;
+        font-size: 15px;
+        height: 85px;
+    }
+
+    .name {
+        width: fit-content;
+        margin-top: 10px;
+        height: 90px;
+        padding-left: 10px;
+        font-size: 60px;
+        line-height: .8;
+    }
+
+    .illustrator {
+        width: fit-content;
+        margin-top: 5px;
+        height: 90px;
+        font-size: 12px;
+        margin-left: 12px;
+    }
+
+    .gallery {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -5px;
+        display: flex;
+        border: 1px white solid;
+        width: 99%;
+        height: 500px;
+    }
+
+}
